add inquiry contact

--- a/public/assets/frontend/scss/layouts/_responsive.scss
+++ b/public/assets/frontend/scss/layouts/_responsive.scss
@@ -981,6 +981,10 @@
         .box-gpr {
             margin-top: 40px;
         }
+
+        .inquiry {
+            margin-top: 30px;
+        }
     }
 
     .float-bidang {
