--- a/public/assets/frontend/scss/layouts/_style.scss
+++ b/public/assets/frontend/scss/layouts/_style.scss
@@ -1506,6 +1506,15 @@ main {
         }
     }
 
+    .box-narration {
+        position: relative;
+        margin-bottom: 30px;
+        margin-left: 30px;
+        padding-left: 20px;
+        border-left: 4px solid var(--c-blue);
+        font-size: 16px;
+    }
+
     .item-video {
         position: relative;
         width: 100%;
@@ -2165,6 +2174,101 @@ main {
                     }
                 }
             }
+        }
+    }
+
+    .item-contact {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        margin: 15px 0;
+
+        span {
+            color: var(--c-text-secondary);
+            font-size: 10px;
+            font-weight: 700;
+            margin-left: 45px;
+            text-transform: uppercase;
+        }
+
+        .content-contact {
+            position: relative;
+            display: flex;
+            i {
+                font-size: 28px;
+                color: var(--c-blue);
+                margin-right: 15px;
+            }
+    
+            .desc-contact {
+                font-weight: 500;
+            }
+        }
+        
+    }
+
+    .box-map {
+        position: relative;
+        display: flex;
+        align-items: center;
+
+        .icon-map {
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 50px;
+            height: 50px;
+            background-color: var(--c-grey_15);
+            border-radius: 100%;
+            margin-right: 20px;
+
+            // &:before {
+            //     position: absolute;
+            //     content: "";
+            //     top: 50%;
+            //     left: 50%;
+            //     transform: translate(-50%, -50%) scale(0);
+            //     width: 100%;
+            //     height: 100%;
+            //     border-radius: 100%;
+            //     background-color: var(--c-blue);
+            //     opacity: 0;
+            //     transition: all .3s var(--easing);
+            // }
+
+            i {
+                color: var(--c-blue);
+                font-size: 24px;
+                transition: .3s var(--easing);
+                z-index: 2;
+            }
+        }
+
+        .btn {
+            color: var(--c-text-primary);
+        }
+
+        @media screen and (min-width: $breakpoint-xl) {
+            &:hover {
+                .icon-map {
+
+                    &::before {
+                        opacity: 1;
+                        transform: translate(-50%, -50%) scale(1);
+                        
+                    }
+
+                    // i {
+                    //     color: var(--c-white);
+                    // }
+                }
+
+                .btn.btn-text::before {
+                    width: 100%;
+                }
+            }
+            
         }
     }
 }
